--- a/styles/main.css
+++ b/styles/main.css
@@ -18,12 +18,28 @@ h1,h2,h3,h4,h5,h6 {
   letter-spacing: 2px;
 }
 
+.corporations {
+	text-align: center;
+}
+
 .flex {
 	display: flex;
 	flex-wrap: nowrap;
 }
 
-.flex {
+.flexwrap {
 	display: flex;
 	flex-wrap: wrap;
+}
+
+.header {
+	font-size: 2em;
+	text-align: center;
+}
+
+section {
+	border: 1px solid black;
+	margin: 2em auto;
+	padding: 2em;
+	width: 400px
 }
